--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     compile 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
